[gd_scene load_steps=7 format=3 uid="uid://d0g80dnd658x4"]

[ext_resource type="Script" uid="uid://wepngtpwwv2f" path="res://source/main_menu/play_menu/game_selection_menu/game_selection_menu.gd" id="1_6utl8"]
[ext_resource type="Script" uid="uid://c46cr4v8cposh" path="res://source/main_menu/play_menu/game_selection_menu/game_select_menu_sync.gd" id="2_qnng7"]
[ext_resource type="Script" uid="uid://tempkcih6qn4" path="res://source/main_menu/play_menu/game_selection_menu/game_import.gd" id="3_dybr7"]
[ext_resource type="Script" uid="uid://bmnjcs0d2w43v" path="res://source/main_menu/play_menu/game_selection_menu/game_list_builtin.gd" id="4_dld7m"]
[ext_resource type="Script" uid="uid://vi2y5br3ui2a" path="res://source/main_menu/play_menu/game_selection_menu/game_list_node.gd" id="7_v8jf4"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_5umsw"]
color = Color(1, 1, 1, 1)
vertical = true

[node name="GameSelectionMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_6utl8")

[node name="MenuSync" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_qnng7")

[node name="GameImport" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_dybr7")

[node name="ImportDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File or Directory"
initial_position = 1
size = Vector2i(931, 500)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 3
access = 2
filters = PackedStringArray("*.json")
show_hidden_files = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="BuiltInGames" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="HBoxContainer/BuiltInGames"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.075
theme_override_font_sizes/font_size = 20
text = "Built-in games"
vertical_alignment = 2

[node name="ScrollBuiltin" type="ScrollContainer" parent="HBoxContainer/BuiltInGames"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 1.0
follow_focus = true

[node name="Control" type="PanelContainer" parent="HBoxContainer/BuiltInGames/ScrollBuiltin"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameListBuiltin" type="VBoxContainer" parent="HBoxContainer/BuiltInGames/ScrollBuiltin/Control"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8
script = ExtResource("4_dld7m")
builtin_games = Array[String](["res://assets/save_files/test1.json", "res://assets/save_files/test2.json", "res://assets/save_files/test3.json"])

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 64
theme_override_styles/separator = SubResource("StyleBoxLine_5umsw")

[node name="ImportedGames" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Top" type="Control" parent="HBoxContainer/ImportedGames"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.075

[node name="Title" type="Label" parent="HBoxContainer/ImportedGames/Top"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Imported games"
vertical_alignment = 2

[node name="ImportButton" type="Button" parent="HBoxContainer/ImportedGames/Top"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
text = "Import"

[node name="ScrollImported" type="ScrollContainer" parent="HBoxContainer/ImportedGames"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 1.0
follow_focus = true

[node name="Control" type="PanelContainer" parent="HBoxContainer/ImportedGames/ScrollImported"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameListImported" type="VBoxContainer" parent="HBoxContainer/ImportedGames/ScrollImported/Control"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8
script = ExtResource("7_v8jf4")

[connection signal="state_changed" from="MenuSync" to="." method="set_game_menu_state"]
[connection signal="dir_selected" from="ImportDialog" to="GameImport" method="_on_import_dialog_dir_selected"]
[connection signal="file_selected" from="ImportDialog" to="GameImport" method="_on_import_dialog_file_selected"]
[connection signal="files_selected" from="ImportDialog" to="GameImport" method="_on_import_dialog_files_selected"]
[connection signal="project_selected" from="HBoxContainer/BuiltInGames/ScrollBuiltin/Control/GameListBuiltin" to="." method="_on_game_clicked"]
[connection signal="pressed" from="HBoxContainer/ImportedGames/Top/ImportButton" to="." method="_on_import_button_pressed"]
[connection signal="project_selected" from="HBoxContainer/ImportedGames/ScrollImported/Control/GameListImported" to="." method="_on_game_clicked"]
